--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ repositories {
 }
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.2'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.sample"
@@ -49,5 +49,6 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.6.1'
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
+    implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
 apply plugin: 'io.objectbox'
